--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
     <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
     <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
-    
+
     <!-- Twitter consumer key and secret -->
     <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
     <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
@@ -107,6 +107,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="new_update_page">Update log entry page</string>
 
     <string name="companys_prompt">Choose a company</string>
     <string name="locations_prompt">Choose a company</string>
@@ -152,14 +153,14 @@
     </string-array>
 
     ////quick_log ////
+    <string name="txt_brief">Brief</string>
     <string name="txt_fname">First name</string>
-     <string name="txt_lname">Last name</string>
-     <string name="txt_email">Email</string>
-     <string name="txt_phone">Phone</string>
-     <string name="txt_age">Age</string>
-     <string name="txt_weight">Weight</string>
+    <string name="txt_lname">Last name</string>
+    <string name="txt_email">Email</string>
+    <string name="txt_phone">Phone</string>
+    <string name="txt_age">Age</string>
+    <string name="txt_weight">Weight</string>
     <string name="txt_additional">Additional</string>
-
 
 
 </resources>
